# BigInteger

./: CMakeLists.txt  Makefile  README.md  main.cpp  test.cpp
.github/classtest/: autograding.json
.github/workflows/: action.yml  classroom.yml
include/: biginteger.hpp
src/: biginteger.cpp
